--- a/compose.yml
+++ b/compose.yml
@@ -26,6 +26,7 @@ services:
       - minecraft
     ports:
       - "${HOST_CUA_PORT:-5000}:5000"
+      - "${HOST_VNC_PORT:-5900}:5900"
 
 networks:
   labnet:
