--- a/victim/Dockerfile
+++ b/victim/Dockerfile
@@ -4,7 +4,9 @@ FROM openjdk:8u181-jdk-alpine
 # Make port 25565 available to the world outside this container
 EXPOSE 25565
 
-ADD server.jar server.jar
+RUN curl -fsSL -o server.jar \
+    https://piston-data.mojang.com/v1/objects/5fafba3f58c40dc51b5c3ca72a98f62dfdae1db7/server.jar || \
+    { echo "[-] Failed to download server.jar. Download manually from https://mcversions.net/download/1.8.8"; exit 1; }
 RUN echo "eula=true" > eula.txt && \
     echo "online-mode=false" >> server.properties
 
